<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/indiv_pokeid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/indiv_pokeid_hint"
            android:inputType="number"
            android:maxLength="3"
            android:maxLines="1" />

        <EditText
            android:id="@+id/indiv_pokename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/indiv_pokename_hint"
            android:maxLength="5"
            android:maxLines="1" />

        <Button
            android:id="@+id/indiv_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="searchPoke"
            android:text="@string/indiv_button_submit" />
    </LinearLayout>

</RelativeLayout>